--- a/messenger-api/src/main/webapp/index.html
+++ b/messenger-api/src/main/webapp/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>BornIT Startcode API</title>
+        <title>Messenger API</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body style="text-align: center">
-        <h1>BornIT CA3 Startcode API</h1>
-        <h3>Change/remove this in your own project</h3>
+        <h1>Messenger API</h1>
     </body>
 </html>
